# JPDFium

./: .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml  prebuild-pdfium.yml  publish-github-packages.yml  release.yml  snapshot.yml
buildSrc/: settings.gradle.kts
buildSrc/src/main/kotlin/: jpdfium.library-conventions.gradle.kts  jpdfium.natives-conventions.gradle.kts
docs/: PUBLISHING.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jpdfium/: TESTING.md  build.gradle.kts
jpdfium-bom/: build.gradle.kts
jpdfium-natives/jpdfium-natives-linux-x64/: build.gradle.kts
jpdfium-spring/: build.gradle.kts
jpdfium-spring/src/main/java/stirling/software/jpdfium/spring/: JPDFiumProperties.java  package-info.java
jpdfium/src/main/java/: module-info.java
jpdfium/src/main/java/stirling/software/jpdfium/: PdfDocument.java  PdfImageConverter.java  PdfMerge.java  PdfPage.java  PdfSplit.java  Watermark.java  WatermarkApplier.java
jpdfium/src/main/java/stirling/software/jpdfium/doc/: BlankPageDetector.java  CompressOptions.java  CompressPreset.java  CompressResult.java  DocInfo.java  EmbedPdfAnnotations.java  FillResult.java  FormFieldType.java  GhostscriptHelper.java  NUpLayout.java  PdfAnalytics.java  PdfAnnotationBuilder.java  PdfAttachments.java  PdfBarcode.java  PdfBookmarkEditor.java  PdfColorConverter.java  PdfCompressor.java  PdfFlattenRotation.java  PdfFormFiller.java  PdfFormReader.java  PdfImageExtractor.java  PdfJavaScriptInspector.java  PdfMetadata.java  PdfNamedDestinations.java  PdfPageEditor.java  PdfPageImporter.java  PdfPageInterleaver.java  PdfPageReorder.java  PdfPathDrawer.java  PdfPrint.java  PdfRepair.java  PdfSecurity.java  PdfSignatures.java  PdfThumbnails.java  PdfWebLinks.java  QpdfHelper.java  QrEncoder.java  RepairResult.java  StructElement.java
jpdfium/src/main/java/stirling/software/jpdfium/exception/: FormFillException.java  JPDFiumException.java  NativeLoadException.java  NativeNotFoundException.java  PdfCorruptException.java  PdfPasswordException.java
jpdfium/src/main/java/stirling/software/jpdfium/fonts/: FontInfo.java  FontNormalizer.java  package-info.java
jpdfium/src/main/java/stirling/software/jpdfium/model/: BooleanString.java  FlattenMode.java  PageSize.java  PdfToImageOptions.java  Rect.java  RenderResult.java
jpdfium/src/main/java/stirling/software/jpdfium/panama/: ActionBindings.java  AnnotationBindings.java  AttachmentBindings.java  BookmarkBindings.java  DocBindings.java  EmbedPdfAnnotationBindings.java  EmbedPdfDocumentBindings.java  FfmHelper.java  FlashTextLib.java  FontLib.java  FormFillBindings.java  GlyphLib.java  IcuLib.java  JpdfiumLib.java  LinkBindings.java  NativeLoader.java  PageEditBindings.java  PageImportBindings.java  Pcre2Lib.java  RepairLib.java  SignatureBindings.java  StructureBindings.java  ThumbnailBindings.java  XmpLib.java
jpdfium/src/main/java/stirling/software/jpdfium/redact/: PdfRedactor.java  RedactOptions.java  RedactResult.java  RedactionSession.java  package-info.java
jpdfium/src/main/java/stirling/software/jpdfium/text/: PageText.java  PdfBoundedText.java  PdfTableExtractor.java  PdfTextExtractor.java  PdfTextSearcher.java  Table.java  TextChar.java  TextLine.java  TextWord.java  package-info.java
jpdfium/src/main/java/stirling/software/jpdfium/transform/: PageOps.java  PdfPageGeometry.java  package-info.java
jpdfium/src/main/java/stirling/software/jpdfium/util/: NativeJsonParser.java
jpdfium/src/test/java/stirling/software/jpdfium/: CharPositionFidelityTest.java  CorpusRedactTest.java  GettingStartedExample.java  ManualTest.java  PdfCorpus.java  PdfDocumentTest.java  RealPdfIntegrationTest.java  VisualDiff.java  VisualRedactTest.java
jpdfium/src/test/java/stirling/software/jpdfium/doc/: PdfAnnotationBuilderTest.java  PdfRepairTest.java  RepairCorpusIntegrationTest.java
jpdfium/src/test/java/stirling/software/jpdfium/exception/: ExceptionHierarchyTest.java
jpdfium/src/test/java/stirling/software/jpdfium/fonts/: FontInfoTest.java  FontNormalizerTest.java
jpdfium/src/test/java/stirling/software/jpdfium/model/: FlattenModeTest.java  PageSizeTest.java  RectTest.java  RenderResultTest.java
jpdfium/src/test/java/stirling/software/jpdfium/panama/: NativeLoaderTest.java
jpdfium/src/test/java/stirling/software/jpdfium/redact/: ObjectFissionCoordinateTest.java  ObjectFissionRedactTest.java  RedactExample.java  RedactOptionsTest.java  RedactResultTest.java  RedactTestPdfGenerator.java  RedactionSessionTest.java
jpdfium/src/test/java/stirling/software/jpdfium/samples/: DebugFormRead.java  RunAllSamples.java  S01_Render.java  S02_TextExtract.java  S03_TextSearch.java  S04_Metadata.java  S04_RedactRegion.java  S05_RedactPattern.java  S06_RedactWords.java  S07_Annotations.java  S07_SecureRedact.java  S08_FullPipeline.java  S09_Flatten.java  S10_PiiRedact.java  S11_Attachments.java  S11_FontNormRedact.java  S12_TwoPhaseRedact.java  S13_PageImport.java  S15_Thumbnails.java  S16_PageEditing.java  S17_NUpLayout.java  S18_Repair.java  S20_ImagesToPdf.java  S21_Thumbnails.java  S22_MergeSplit.java  S23_Watermark.java  S25_PageGeometry.java  S27_Security.java  S33_Encryption.java  S34_Linearizer.java  S35_Overlay.java  S36_AnnotationBuilder.java  S39_WebLinks.java  S41_VersionConverter.java  S42_BoundedText.java  S43_StreamOptimizer.java  S44_FlattenRotation.java  S45_PageInterleaver.java  S46_NamedDestinations.java  S48_EmbedPdfAnnotations.java  (+11 more)
jpdfium/src/test/java/stirling/software/jpdfium/text/: PageTextTest.java  PdfTextExtractorTest.java  PdfTextSearcherTest.java  (+4 more)
native/: CMakeLists.txt  build-real.sh  build-stub.sh  fetch-prebuilt-pdfium.sh  pdfium.version  setup-pdfium.sh
native/bridge/: CMakeLists.txt
native/bridge/include/: jpdfium.h  jpdfium_internal.h
native/bridge/src/: jpdfium_advanced.cpp  jpdfium_brotli.cpp  jpdfium_document.cpp  jpdfium_lcms.cpp  jpdfium_openjpeg.cpp  jpdfium_pdfio.cpp  jpdfium_redact.cpp  jpdfium_repair.cpp  jpdfium_stub.cpp  jpdfium_unicode.cpp
(+23 files in other folders)
